name:                   cgserver
version:                0.1.0.0
description:            A HTTP server that provides an API to manage cgroups.
license:                BSD3
license-file:           LICENSE
author:                 Tomislav Viljetić
maintainer:             tomislav@viljetic.de
copyright:              (c) 2014 Tomislav Viljetić
-- category:               
build-type:             Simple
extra-source-files:     README
cabal-version:          >=1.10

executable cgserver
  main-is:              Main.hs
  -- other-modules:        
  other-extensions:     OverloadedStrings
  build-depends:        base >=4.7 && <4.8
                      , aeson >=0.8 && <0.9
                      , attoparsec >=0.12 && <0.13
                      , bytestring >=0.10 && <0.11
                      , containers >=0.5 && <0.6
                      , directory >=1.2 && <1.3
                      , filepath >=1.3 && <1.4
                      , http-types >=0.8 && <0.9
                      , io-streams >=1.2 && <1.3
                      , safe >=0.3 && <0.4
                      , text >=1.1 && <1.3
                      , wai >=3.0 && <3.1
                      , warp >=3.0 && <3.1
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
